Fix checkstyle and pmd issues